ポリシー・規約

--- a/プライバシーポリシー.md
+++ b/プライバシーポリシー.md
@@ -1,33 +1,31 @@
 # プライバシーポリシー
 
-**【免責事項】重要：必ずお読みください**
-
-**私はAIであり、法律の専門家ではありません。以下に生成する文章は、一般的な情報に基づくテンプレートであり、法的な助言として提供するものではありません。**
-
-**アプリを正式にリリースする前には、必ず弁護士などの法律専門家にご相談の上、ご自身の事業内容や法的な要件に合わせて、以下の内容をレビュー・修正してください。**
-
 ---
 
 **1. 事業者の名称**
-[あなたの氏名または事業者名]
+相原立弥
 
 **2. 関係法令・ガイドライン等の遵守**
 当方（前項で定義）は、個人情報の保護に関する法律（以下「個人情報保護法」といいます。）その他の法令及び関連ガイドラインを遵守して、個人データの適正な取扱いを行います。
 
 **3. 取得する情報**
 当方は、本アプリの提供にあたり、以下の情報を取得します。
-*   **アカウント情報:** メールアドレス、表示名、外部サービス（Google, Apple）のユーザー識別子
-*   **ユーザーコンテンツ:** ユーザーが保存したWebページのリンク（URL）、ユーザーが作成したタグ
-*   **AI生成コンテンツ:** AI機能によって生成されたタグ、分析・解説テキスト
-*   **利用状況データ:** AI機能の利用回数、プランの加入状況など、サービスの利用状況に関する情報
-*   **端末情報:** （必要に応じて）デバイスID、OS情報など
+*   **アカウント情報:** 
+    - Google認証: Googleアカウントのメールアドレス、表示名、ユーザー識別子
+    - Apple認証: Apple IDのメールアドレス（オプション）、表示名（オプション）、ユーザー識別子
+*   **ユーザーコンテンツ:** ユーザーが保存したWebページのリンク（URL）、リンクのタイトル・説明文、ユーザーが作成したタグ、フォルダ情報
+*   **AI生成コンテンツ:** AI機能（Google Gemini API）によって生成されたタグ
+*   **利用状況データ:** AI機能の利用回数、プランの加入状況、アプリの使用統計、通知設定
+*   **通知関連情報:** プッシュ通知のためのFCM（Firebase Cloud Messaging）トークン
+*   **端末情報:** （必要に応じて）デバイス情報、OS情報
 
 **4. 利用目的**
 当方は、取得した情報を以下の目的で利用し、ユーザーの同意なく、これ以外の目的で利用することはありません。
 *   本アプリのサービス提供、本人確認、ユーザー認証のため
 *   ユーザーが保存したリンクの整理・分類機能を提供するため
-*   AI機能を提供するため（※後述の「第三者提供」参照）
-*   料金の請求、計算のため
+*   AI機能（Google Gemini API）を提供するため（※後述の「第三者提供」参照）
+*   3日間未読リンクの通知機能を提供するため（FCMによるプッシュ通知）
+*   料金の請求、計算のため（Plusプランの月額サブスクリプション）
 *   サービスの改善、不具合修正、新たなサービスの開発のため
 *   お問い合わせに対応するため
 *   利用規約に違反したユーザーを特定し、ご利用をお断りするため
@@ -35,23 +33,26 @@
 
 **5. 第三者提供**
 当方は、以下の場合を除き、あらかじめユーザーの同意を得ることなく、第三者に個人情報を提供することはありません。
-*   **AI機能の利用:** AI機能を提供するため、ユーザーが分析対象として指定したリンクのコンテンツ（URL、タイトル、Webページ本文など）を、Google, LLCが提供するGemini APIに送信します。この際、ユーザーのメールアドレスなどの個人識別情報は送信されません。
+*   **AI機能の利用:** AIタグ生成機能を提供するため、ユーザーが追加したリンクのOGPメタデータ（タイトル、説明文、キーワードなど）を、Google LLCが提供するGemini APIに送信します。この際、ユーザーのメールアドレスなどの個人識別情報は送信されません。
+*   **プッシュ通知サービス:** 3日間未読リンクの通知などを送信するため、必要な範囲でFirebase Cloud Messaging（Google LLC）を利用します。
+*   **認証サービス:** ユーザー認証のため、Google認証（Google LLC）およびApple認証（Apple Inc.）を利用します。
 *   **法令に基づく場合:** 人の生命、身体または財産の保護のために必要がある場合であって、本人の同意を得ることが困難であるときなど、法令に基づき開示することが必要である場合。
 
 **6. 安全管理措置**
-当方は、取り扱う個人情報の漏洩、滅失またはき損の防止その他の個人情報の安全管理のために、Firebaseが提供する堅牢なセキュリティ機能を利用し、必要かつ適切な措置を講じます。
+当方は、取り扱う個人情報の漏洩、滅失またはき損の防止その他の個人情報の安全管理のために、Firebase（Google LLC）が提供する堅牢なセキュリティ機能を利用し、必要かつ適切な措置を講じます。具体的には、Firestoreデータベースのアクセス制御、Firebase Authenticationによる認証システム、データ送信時のHTTPS暗号化、セキュリティルールによるデータ保護などを実施しています。
 
 **7. 開示等の請求**
 当方は、ユーザーご本人から、当方の保有する個人情報について、個人情報保護法の定めに基づき開示、訂正、追加、削除、利用停止、消去、第三者提供の停止のご請求があった場合には、ご本人からのご請求であることを確認の上で、法令に従い、適切に対応いたします。詳しくは、末尾のお問い合わせ窓口までご連絡ください。
 
 **8. 本ポリシーの変更**
 1. 当方は、本ポリシーを変更する場合があります。
-2. 本ポリシーを変更する場合、当方は、変更後の本ポリシーの施行時期及び内容を、アプリ内での通知またはApp Store等のアップデート説明文を通じて、施行日の30日前までにユーザーにお知らせします。
-3. ただし、法令上ユーザーの同意が必要となるような内容の変更については、当方が定める方法でユーザーの同意を得るものとします。
+2. 変更後の本ポリシーは、アプリ内での通知、App Store等のアップデート説明文、または当方が定める方法で告知した時点からその効力を生じるものとします。
+3. 法令上ユーザーの同意が必要となるような内容の変更については、当方が定める方法でユーザーの同意を得るものとします。
 4. ユーザーは、本ポリシーの変更後も本アプリを継続して利用することにより、変更後の本ポリシーに同意したものとみなします。
 
 **9. お問い合わせ窓口**
 本ポリシーに関するお問い合わせは、下記の窓口までお願いいたします。
-*   [連絡先メールアドレスなどを記載]
+*   メールアドレス: tatsu0823takasago@icloud.com
+*   事業者名: 相原立弥
 
-制定日: 2025年8月12日
+制定日: 2025年8月25日
