--- a/利用規約.md
+++ b/利用規約.md
@@ -1,15 +1,8 @@
 # 利用規約
-
-**【免責事項】重要：必ずお読みください**
-
-**私はAIであり、法律の専門家ではありません。以下に生成する文章は、一般的な情報に基づくテンプレートであり、法的な助言として提供するものではありません。**
-
-**アプリを正式にリリースする前には、必ず弁護士などの法律専門家にご相談の上、ご自身の事業内容や法的な要件に合わせて、以下の内容をレビュー・修正してください。**
-
 ---
 
 **第1条（本規約への同意）**
-1.  この利用規約（以下「本規約」といいます。）は、[相原立弥]（以下「当方」といいます。）が提供するアプリケーション「.Wink」（以下「本アプリ」といいます。）の利用条件を定めるものです。
+1.  この利用規約（以下「本規約」といいます。）は、相原立弥（以下「当方」といいます。）が提供するアプリケーション「.Wink」（以下「本アプリ」といいます。）の利用条件を定めるものです。
 2.  ユーザーは、本アプリをダウンロード、インストール、または利用することにより、本規約に有効かつ取消不能な同意をしたものとみなされます。
 
 **第2条（定義）**
@@ -22,21 +15,21 @@
 2.  本アプリは、保存されたリンクの内容に基づき、AI（人工知能）を用いて自動的にタグを生成したり、複数のリンクを横断的に分析・解説したりする機能（以下「AI機能」といいます。）を提供します。
 
 **第4条（アカウント）**
-1.  本アプリの利用にあたり、ユーザーはメールアドレス、Googleアカウント、またはApple IDを用いてアカウント登録を行う必要があります。
+1.  本アプリの利用にあたり、ユーザーはGoogleアカウントまたはApple IDを用いてアカウント登録を行う必要があります。
 2.  ユーザーは、自身の登録情報を不正に利用されないよう、自己の責任において厳重に管理するものとします。当方は、登録情報が第三者に利用されたことによって生じた損害について、当方に故意または重大な過失がある場合を除き、一切の責任を負いません。
 
 **第5条（サブスクリプションと有料プラン）**
-1. 本アプリは、無料で利用できる機能に加え、月単位または年単位のサブスクリプションとして提供される有料プラン（以下「有料プラン」といいます。）を提供します。
+1. 本アプリは、無料で利用できる「Freeプラン」に加え、月額500円のサブスクリプションとして提供される「Plusプラン」（以下「有料プラン」といいます。）を提供します。
 2. 有料プランの登録、支払い、および自動更新の管理は、Apple App StoreまたはGoogle Play Storeなど、ユーザーが本アプリをダウンロードしたプラットフォーム（以下「アプリストア」といいます。）の決済システムを通じて行われます。
 3. サブスクリプションは、各請求期間の終了前に、ユーザー自身がアプリストアの定める手順に従って解約手続きを行わない限り、自動的に更新されます。
 4. 自動更新を希望しない場合、ユーザーは、現在のサブスクリプション期間が終了する24時間以上前に、アプリストアのアカウント設定からサブスクリプションを解約する必要があります。
 5. 当方は、ユーザーが支払った利用料金について、法令に別段の定めがある場合を除き、いかなる理由があっても返金いたしません。日割り計算による返金も行いません。
-6. 当方は、ユーザーに事前に通知することにより、有料プランの料金を変更することがあります。料金変更は、通知後に到来する次の請求期間から適用されるものとします。
+6. 料金の値上げを行う場合に限り、ユーザーに適切な方法で事前に通知いたします。料金の値下げ、機能の追加・変更・削除については事前通知なく実施することがあります。
 
 **第6条（AI機能の利用）**
-1.  ユーザーがAI機能を利用する場合、本アプリは、分析対象としてユーザーが選択したリンクのコンテンツ（タイトル、説明文、Webページ本文など）を、当方が契約する第三者のAIサービス（Google Gemini APIなど）のサーバーに送信します。
-2.  AI機能によって生成されたタグや文章の正確性、完全性、有用性について、当方は一切の保証をしません。
-3.  AI機能の利用には、プランごとに定められた上限回数や品質制限が適用される場合があります。また、サーバーの負荷状況等により、予告なく一時的な利用制限を行う場合があります。
+1.  ユーザーがAIタグ生成機能を利用する場合、本アプリは、リンクのOGPメタデータ（タイトル、説明文、キーワードなど）をGoogle Gemini APIに送信し、タグを自動生成します。
+2.  AI機能によって生成されたタグの正確性、完全性、有用性について、当方は一切の保証をしません。
+3.  AI機能の利用には、プランごとに定められた上限回数が適用されます。また、サーバーの負荷状況等により、予告なく一時的な利用制限を行う場合があります。
 
 **第7条（禁止事項）**
 ユーザーは、本アプリの利用にあたり、以下の行為をしてはなりません。
@@ -78,9 +71,11 @@
 3.  当方が損害賠償責任を負う場合であっても、その賠償額は、当方に故意または重大な過失がある場合を除き、当該損害が発生した月にユーザーが当方に支払った利用料金の額を上限とします。
 
 **第13条（本規約の変更）**
-当方は、必要と判断した場合には、ユーザーに通知することなくいつでも本規約を変更することができるものとします。変更後の利用規約は、本アプリ内に掲示された時点からその効力を生じるものとします。
+1. 当方は、必要と判断した場合には、本規約を変更することができるものとします。
+2. 変更後の利用規約は、アプリ内での通知、App Store等のアップデート説明文、または当方が定める方法で告知した時点からその効力を生じるものとします。
+3. ユーザーは、変更に同意できない場合、本アプリの利用を停止できます。変更後も本アプリを利用し続けることで、変更に同意したものとみなします。
 
 **第14条（準拠法・裁判管轄）**
-本規約の解釈にあたっては、日本法を準拠法とします。本サービスに関して紛争が生じた場合には、[東京地方裁判所]を専属的合意管轄とします。
+本規約の解釈にあたっては、日本法を準拠法とします。本サービスに関して紛争が生じた場合には、さいたま地方裁判所を専属的合意管轄とします。
 
 以上
