--- a/プライバシーポリシー.md
+++ b/プライバシーポリシー.md
@@ -6,7 +6,7 @@
 相原立弥
 
 **2. 関係法令・ガイドライン等の遵守**
-当方（前項で定義）は、個人情報の保護に関する法律（以下「個人情報保護法」といいます。）その他の法令及び関連ガイドラインを遵守して、個人データの適正な取扱いを行います。
+当方（第1項で定義）は、個人情報の保護に関する法律（以下「個人情報保護法」といいます。）その他の法令及び関連ガイドラインを遵守して、個人データの適正な取扱いを行います。
 
 **3. 取得する情報**
 当方は、本アプリの提供にあたり、以下の情報を取得します。
@@ -37,6 +37,8 @@
 *   **プッシュ通知サービス:** 3日間未読リンクの通知などを送信するため、必要な範囲でFirebase Cloud Messaging（Google LLC）を利用します。
 *   **認証サービス:** ユーザー認証のため、Google認証（Google LLC）およびApple認証（Apple Inc.）を利用します。
 *   **法令に基づく場合:** 人の生命、身体または財産の保護のために必要がある場合であって、本人の同意を得ることが困難であるときなど、法令に基づき開示することが必要である場合。
+外国にある第三者への提供
+本条に定める第三者提供の一部として、ユーザーの情報を日本国外に所在する事業者に提供することがあります。提供先であるGoogle LLC及びApple Inc.が所在するアメリカ合衆国には、日本のような国単位の包括的な個人情報保護法制は存在しませんが、両社はOECDプライバシーガイドライン8原則に対応する個人情報保護措置を講じています。当方は、これらの事業者が適切な安全管理措置を講じていることを確認した上で、個人情報の提供を行います。
 
 **6. 安全管理措置**
 当方は、取り扱う個人情報の漏洩、滅失またはき損の防止その他の個人情報の安全管理のために、Firebase（Google LLC）が提供する堅牢なセキュリティ機能を利用し、必要かつ適切な措置を講じます。具体的には、Firestoreデータベースのアクセス制御、Firebase Authenticationによる認証システム、データ送信時のHTTPS暗号化、セキュリティルールによるデータ保護などを実施しています。
@@ -55,4 +57,4 @@
 *   メールアドレス: tatsu0823takasago@icloud.com
 *   事業者名: 相原立弥
 
-制定日: 2025年8月25日
+制定日: 2025年8月29日
