--- a/利用規約.md
+++ b/利用規約.md
@@ -12,13 +12,17 @@
 
 **第3条（本アプリの概要）**
 1.  本アプリは、ユーザーがWebページのリンクを保存し、整理・活用することを支援するサービスです。
-2.  本アプリは、保存されたリンクの内容に基づき、AI（人工知能）を用いて自動的にタグを生成したり、複数のリンクを横断的に分析・解説したりする機能（以下「AI機能」といいます。）を提供します。
+2.  本アプリは、保存されたリンクの内容に基づき、AI（人工知能）を用いて自動的にタグを生成する機能（以下「AI機能」といいます。）を提供します。
 
 **第4条（アカウント）**
 1.  本アプリの利用にあたり、ユーザーはGoogleアカウントまたはApple IDを用いてアカウント登録を行う必要があります。
 2.  ユーザーは、自身の登録情報を不正に利用されないよう、自己の責任において厳重に管理するものとします。当方は、登録情報が第三者に利用されたことによって生じた損害について、当方に故意または重大な過失がある場合を除き、一切の責任を負いません。
 
-**第5条（サブスクリプションと有料プラン）**
+**第5条（未成年者による利用）**
+1.  ユーザーが未成年者である場合、法定代理人（親権者など）の同意を得た上で本アプリを利用するものとします。
+2.  本規約に同意した時点で未成年者であったユーザーが、成年に達した後に本アプリを利用した場合、当該ユーザーは、未成年者であった期間中の利用行為を追認したものとみなします。
+
+**第6条（サブスクリプションと有料プラン）**
 1. 本アプリは、無料で利用できる「Freeプラン」に加え、月額500円のサブスクリプションとして提供される「Plusプラン」（以下「有料プラン」といいます。）を提供します。
 2. 有料プランの登録、支払い、および自動更新の管理は、Apple App StoreまたはGoogle Play Storeなど、ユーザーが本アプリをダウンロードしたプラットフォーム（以下「アプリストア」といいます。）の決済システムを通じて行われます。
 3. サブスクリプションは、各請求期間の終了前に、ユーザー自身がアプリストアの定める手順に従って解約手続きを行わない限り、自動的に更新されます。
@@ -26,12 +30,12 @@
 5. 当方は、ユーザーが支払った利用料金について、法令に別段の定めがある場合を除き、いかなる理由があっても返金いたしません。日割り計算による返金も行いません。
 6. 料金の値上げを行う場合に限り、ユーザーに適切な方法で事前に通知いたします。料金の値下げ、機能の追加・変更・削除については事前通知なく実施することがあります。
 
-**第6条（AI機能の利用）**
+**第7条（AI機能の利用）**
 1.  ユーザーがAIタグ生成機能を利用する場合、本アプリは、リンクのOGPメタデータ（タイトル、説明文、キーワードなど）をGoogle Gemini APIに送信し、タグを自動生成します。
 2.  AI機能によって生成されたタグの正確性、完全性、有用性について、当方は一切の保証をしません。
 3.  AI機能の利用には、プランごとに定められた上限回数が適用されます。また、サーバーの負荷状況等により、予告なく一時的な利用制限を行う場合があります。
 
-**第7条（禁止事項）**
+**第8条（禁止事項）**
 ユーザーは、本アプリの利用にあたり、以下の行為をしてはなりません。
 1.  法令または公序良俗に違反する行為
 2.  犯罪行為に関連する行為
@@ -41,13 +45,13 @@
 6.  当方のサービスに関連して、反社会的勢力に対して直接または間接に利益を供与する行為
 7.  その他、当方が不適切と判断する行為
 
-**第8条（権利帰属）**
+**第9条（権利帰属）**
 1. 本アプリに関する知的財産権は、全て当方または当方にライセンスを許諾している者に帰属します。
 2. ユーザーは、投稿データについて、自らが投稿することについての適法な権利を有していること、及び投稿データが第三者の権利を侵害していないことについて、当方に対し表明し、保証するものとします。
 3. ユーザーは、投稿データについて、当方に対し、本サービスの提供、改善、宣伝広告（本アプリ内での事例紹介など）に必要な範囲内で、世界的、非独占的、無償、サブライセンス可能かつ譲渡可能な使用、複製、配布、派生著作物の作成、表示及び実行に関するライセンスを付与します。
 4. ユーザーは、当方及び当方から権利を承継しまたは許諾された者に対して著作者人格権を行使しないことに同意するものとします。
 
-**第9条（登録抹消等）**
+**第10条（登録抹消等）**
 当方は、ユーザーが以下の各号のいずれかの事由に該当する場合は、事前に通知または催告することなく、当該ユーザーについて本アプリの利用を一時的に停止し、またはユーザーとしての登録を抹消することができます。
 (1) 本規約のいずれかの条項に違反した場合
 (2) 登録事項に虚偽の事実があることが判明した場合
@@ -55,27 +59,27 @@
 (4) 当方からの問い合わせその他の回答を求める連絡に対して30日間以上応答がない場合
 (5) その他、当方が本アプリの利用の継続を適当でないと判断した場合
 
-**第10条（本サービスの提供の停止等）**
+**第11条（本サービスの提供の停止等）**
 当方は、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
 1.  本サービスにかかるコンピュータシステムの保守点検または更新を行う場合
 2.  地震、落雷、火災、停電または天災などの不可抗力により、本サービスの提供が困難となった場合
 3.  その他、当方が本サービスの提供が困難と判断した場合
 
-**第11条（本サービスの内容の変更、終了）**
+**第12条（本サービスの内容の変更、終了）**
 1. 当方は、当方の都合により、ユーザーへの事前の通知をもって、本サービスの内容を変更し、または提供を終了することができます。
 2. 当方は、本条に基づき当方が行った措置によりユーザーに生じた損害について、一切の責任を負いません。
 
-**第12条（免責事項）**
+**第13条（免責事項）**
 1.  当方は、本アプリに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
 2.  当方は、本アプリに起因してユーザーに生じたあらゆる損害について、当方に故意または重大な過失がある場合を除き、一切の責任を負いません。
 3.  当方が損害賠償責任を負う場合であっても、その賠償額は、当方に故意または重大な過失がある場合を除き、当該損害が発生した月にユーザーが当方に支払った利用料金の額を上限とします。
 
-**第13条（本規約の変更）**
+**第14条（本規約の変更）**
 1. 当方は、必要と判断した場合には、本規約を変更することができるものとします。
 2. 変更後の利用規約は、アプリ内での通知、App Store等のアップデート説明文、または当方が定める方法で告知した時点からその効力を生じるものとします。
 3. ユーザーは、変更に同意できない場合、本アプリの利用を停止できます。変更後も本アプリを利用し続けることで、変更に同意したものとみなします。
 
-**第14条（準拠法・裁判管轄）**
+**第15条（準拠法・裁判管轄）**
 本規約の解釈にあたっては、日本法を準拠法とします。本サービスに関して紛争が生じた場合には、さいたま地方裁判所を専属的合意管轄とします。
 
 以上
